# gireng

./: .dockerignore  .env.template  .gitignore  ARCHITECTURE.md  DEEPSEEK_MIGRATION.md  DEPLOY.md  GLM_5.1_ENHANCEMENTS.md  README.md  analyze.py  check_health.ps1  debug_report.html  debug_report2.html  debug_report3.html  debug_report4.html  debug_report5.html  docker-compose.yml  docs.md  init-multi-db.sh  openclaw-gw.ps1  output-report-sandbox.md  qiling_integration.md  query_body.json  query_response.json  report.html  report_827f41fc1a6f8a4c.html  report_827f41fc1a6f8a4c.txt  report_ghidra.html  report_print_template.html  report_r2.html  run.py  session_backup.json  status_check.json  tech-spec.md  test_glm_api.py  test_glm_api.sh  tmp_aflj.txt  tmp_agcj.txt  tmp_find_encoding.py  tmp_fix_encoding.py  tmp_status.json  (+2 more)
app/: Dockerfile.ui  README.md  (+6 more)
backend/: Dockerfile  Dockerfile.qiling  e2e_test_chargen.py  example_usage.py  pyproject.toml
backend/ghidra_scripts/: README.md  add_comment.py  analyze_binary_structure.py  build_call_graph.py  decompile_function.py  disassemble_at.py  find_strings.py  find_xrefs.py  get_function_graph.py  list_functions.py  rename_symbol.py  search_bytes.py
backend/qiling_scripts/: common.py  create_minimal_hives.py  create_stub_dlls.py  detect_evasion.py  emulate_binary.py  memory_analysis.py  network_analysis.py  trace_api_calls.py  trace_instructions.py  trace_syscalls.py
backend/src/ghidra_agent/: auth.py  call_graph_analyzer.py  config.py  context_builder.py  database.py  decompile_planner.py  evidence_correlator.py  function_priority.py  function_tools.py  glm_function_tools.py  graph.py  iana_tlds.py  ioc_extractor.py  langfuse_tracing.py  llm.py  logging.py  memory.py  models.py  prompts.py  qiling_graph.py  qiling_tools.py  r2_graph.py  r2_tools.py  ranking_utils.py  rate_limiter.py  reporting.py  sessions.py  state.py  storage.py  tools.py  ui_adapter.py  utils.py
backend/src/ghidra_agent/api/: main.py  memory_routes.py
backend/src/ghidra_agent/ghidra/: runner.py
backend/src/ghidra_agent/qiling/: __init__.py  runner.py
backend/tests/: conftest.py  sample_data.py  test_api.py  test_call_graph_analyzer.py  test_chargen_e2e.py  test_e2e.py  test_evidence_correlation.py  test_function_calling.py  test_function_priority.py  test_glm_function_calling.py  test_ioc_verdict_qiling.py  test_qiling_graph.py  test_qiling_runner.py  test_qiling_tools.py  test_r2_graph.py  test_r2_runner.py  test_r2_tools.py
(+87 files in other folders)
