[project]
name = "ghidra-agent"
version = "0.1.0"
description = "Ghidra Reverse Engineering Agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.27.1",
  "langchain==0.3.14",
  "langgraph==0.2.52",
  "httpx==0.27.0",
  "structlog==24.4.0",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "tenacity==8.5.0",
  "websockets==12.0",
  "python-multipart==0.0.9",
  "litellm==1.61.16",
  "zhipuai>=2.0.0",
  "langchain-community>=0.0.32",
  "asyncpg>=0.29.0",
  "langfuse>=2.0.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
cli = ["typer==0.12.3"]
