[project]
name = "ghidra-agent"
version = "0.1.0"
description = "Ghidra Reverse Engineering Agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.27.1",
  "langchain==0.3.14",
  "langgraph==0.2.52",
  "httpx==0.27.0",
  "structlog==24.4.0",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "tenacity==8.5.0",
  "websockets==12.0",
  "python-multipart==0.0.9",
  "litellm==1.61.16",
  "langchain-community>=0.0.32",
  "asyncpg>=0.29.0",
  "langfuse>=2.0.0,<3.0.0",
  "playwright>=1.40.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0,<4.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
cli = ["typer==0.12.3"]

# ---------------------------------------------------------------------------
# Ruff linter / formatter config
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501",   # line too long — handled by formatter
  "E741",   # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
# PyGhidra scripts use injected globals (currentProgram, toAddr, etc.)
"ghidra_scripts/*.py" = ["F821", "F841", "E402", "F401"]
# __init__.py re-exports are expected
"src/**/__init__.py" = ["F401"]
# Test files: conftest patches sys.modules before imports; e2e tests have deferred imports
"tests/*.py" = ["E402", "F841"]
"e2e_test_*.py" = ["E402", "F841"]
